==================== 2.25.90 ====================

2009-01-30  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: allow setting a repeat delay of
	up to 2 seconds (bug #569612)

2009-01-16  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: hide help button in Options,
	http://bugzilla.gnome.org/show_bug.cgi?id=556952

2009-01-10  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbot.c: sort options by description

==================== 2.25.3 ====================
==================== 2.25.2 ====================
==================== 2.25.1 ====================

2008-10-27  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties.glade:
	hide/show the "Default" column depending on the "layout per window"
	checkbox, http://bugzilla.gnome.org/show_bug.cgi?id=555261

2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkbot.c: (xkb_options_popup_dialog):
	declare variable at beginning of code block, fixes build with gcc 2.x

2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkbot.c: (option_focused_cb),
	(xkb_options_add_option), (xkb_options_add_group):
	* gnome-keyboard-properties.glade: scroll the options window when the
	keyboard focus moves out of the visible part (bug #557944)

Fri Oct 24 19:38:52 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-keyboard-properties.c: Don't include gnome.h

Fri Oct 24 19:16:10 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-keyboard-properties.c (main): Remove copying of legacy settings

2008-10-24  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkbot.c: Small fix - remember sorted list
	of expanders (in properties)

2008-10-19  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-a11y.c: (setup_a11y_tabs): actually connect
	the stickykeys_two_key_off button (bug #556818)

2008-10-19  Sergey Udaltsov <svu@gnome.org>
