@@ -1,3 +1,9 @@
+2009-02-07  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbot.c, gnome-keyboard-properties.glade:
+	restored (now functioning) help button in Options,
+	http://bugzilla.gnome.org/show_bug.cgi?id=556952
+
 ==================== 2.25.90 ====================
 
 2009-01-30  Jens Granseuer  <jensgr@gmx.net>
